[NEW] recaptcha added to the contact-us page

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
 @import "../components/Header/style.css";
 @import "../templates/HomePage/Collaboration/style.css";
+@import "../templates/RegisterCollectionPage/Forms/style.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
