--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,14 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+@layer utilities {
+  .css-blurry-gradient {
+    background: radial-gradient(
+      circle at 50% 50%,
+      rgba(211, 245, 110, 1),
+      rgba(76, 0, 255, 0)
+    );
+  }
 }
 
 /* styles for splide carousel */
